--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
       </section>
     </main>
-    <footer role="content-info">
+    <footer role="contact-info">
       <h3>Contact</h3>
       <a href="mailto:dmarriott93@gmail.com">dmarriott93@gmail.com</a
       ><span> |</span>
