--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </div>
     </div>
     <a class="anchor" id="top"></a>
-    <main class="main" role="main" id="top">
+    <main class="main">
       <section class="main-header-section">
-        <header role="banner" class="banner">
+        <header class="banner">
           <p class="name" style="color:rgb(10, 43, 23); display: inline;">
             <span>Daniel</span>
             <span>A.</span>
@@ -170,7 +170,7 @@
         </div>
       </section>
     </main>
-    <footer role="contact-info">
+    <footer>
       <h3>Contact</h3>
       <a href="mailto:dmarriott93@gmail.com">dmarriott93@gmail.com</a
       ><span> |</span>
