--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
   </head>
   <body>
     <div role="navigation" class="nav">
-      <input class="menu-btn" type="checkbox" id="menu-btn" />
-      <label class="menu-icon" for="menu-btn"
-        ><span class="navicon"></span
-      ></label>
-      <div class="menu">
-        <ul>
-          <li><a href="#top">Main</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#bio">Bio</a></li>
-          <li><a href="#resume">Resume</a></li>
-        </ul>
+      <button
+        class="menu-btn"
+        type="checkbox"
+        id="menu-btn"
+        onclick="menuEvent()"
+      >
+        Menu
+      </button>
+      <div class="menu" id="dropdown">
+        <a href="#top">Main</a>
+        <a href="#projects">Projects</a>
+        <a href="#bio">Bio</a>
+        <a href="#resume">Resume</a>
       </div>
     </div>
     <a class="anchor" id="top"></a>
@@ -182,5 +184,6 @@
         >LinkedIn</a
       >
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
