--- a/index.html
+++ b/index.html
@@ -22,12 +22,7 @@
   </head>
   <body>
     <div role="navigation" class="nav">
-      <button
-        class="menu-btn"
-        type="checkbox"
-        id="menu-btn"
-        onclick="menuEvent()"
-      >
+      <button class="menu-btn" id="menu-btn" onclick="menuEvent()">
         Menu
       </button>
       <div class="menu" id="dropdown">
@@ -41,11 +36,11 @@
     <main class="main">
       <section class="main-header-section">
         <header class="banner">
-          <p class="name" style="color:rgb(10, 43, 23); display: inline;">
+          <h1 class="name" style="color:rgb(10, 43, 23); display: inline;">
             <span>Daniel</span>
             <span>A.</span>
             <span>Marriott</span>
-          </p>
+          </h1>
           <p class="headline">
             Front-end engineer skilled in Javascript and HTML/CSS
           </p>
